--- a/FTP_Socket_Server/mymainwindow.ui
+++ b/FTP_Socket_Server/mymainwindow.ui
@@ -103,7 +103,7 @@
       <item row="3" column="1" colspan="2">
        <widget class="QLineEdit" name="lineEditPassword">
         <property name="text">
-         <string>122333</string>
+         <string>qt</string>
         </property>
        </widget>
       </item>
